# ROS2_demo

./: .gitignore  CMakeLists.txt  README.md  ros2_colcon_build.sh  start_clion.sh
fishbot/src/fishbot_description/: package.xml
fishbot/src/fishbot_description/config/: fishbot_ros2_controller.yaml
fishbot/src/fishbot_description/config/rviz/: display_robot_model.rviz
fishbot/src/fishbot_description/launch/: gazebo_sim.launch.py
fishbot/src/fishbot_description/urdf/: first_robot.gv  first_robot.urdf  first_robot.xacro
fishbot/src/fishbot_description/urdf/fishbot/: base.urdf.xacro
fishbot/src/fishbot_description/urdf/fishbot/plugins/: gazebo_sensor_plugin.xacro
fishbot/src/fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro
fishbot/src/fishbot_description/world/: custom_room.world
fishbot/src/fishbot_description/world/room/: model.sdf
interfaces/: colcon_build_script.sh
interfaces/src/face_recognition/srv/: FaceDetector.srv
interfaces/src/fishros/: CMakeLists.txt  package.xml
interfaces/src/robot_control_interfaces/: CMakeLists.txt
interfaces/src/system_status_interface/: CMakeLists.txt  package.xml
src/face_recognition/: CMakeLists.txt  package.xml
src/face_recognition/srv/: FaceDetector.srv
src/fishbot_description/: CMakeLists.txt  package.xml
src/fishbot_description/config/: fishbot_ros2_controller.yaml
src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/fishbot_description/urdf/fishbot/: base.urdf.xacro  common_inertia.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
src/fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/fishbot_description/urdf/fishbot/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
src/fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  laser.urdf.xacro
src/fishbot_navigation2/: CMakeLists.txt  package.xml
src/fishbot_navigation2/config/: nav2_params.yaml
src/fishros/: package.xml
src/fishros_cpp/: CMakeLists.txt  package.xml
src/fishros_cpp/include/fishros_cpp/: robot.h
src/fishros_cpp/include/fishros_cpp/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  system_status.h  system_status.hpp
src/fishros_cpp/include/fishros_cpp/msg/detail/: system_status__builder.hpp  system_status__functions.c  system_status__functions.h  system_status__rosidl_typesupport_fastrtps_c.h  system_status__rosidl_typesupport_fastrtps_cpp.hpp  system_status__rosidl_typesupport_introspection_c.h  system_status__rosidl_typesupport_introspection_cpp.hpp  system_status__struct.h  system_status__struct.hpp  system_status__traits.hpp  system_status__type_support.c  system_status__type_support.cpp  system_status__type_support.h  system_status__type_support.hpp
src/fishros_cpp/launch/: actions.launch.py  fishros.launch.py  tf.launch.py
src/fishros_cpp/src/: action_control.cpp  action_robot.cpp  demo_tf_dynamic_broadcaster.cpp  demo_tf_listener.cpp  demo_tf_static_broadcaster.cpp  example_parameters.cpp  face_recognition_client.cpp  face_recognition_server.cpp  patrol_client.cpp  robot.cpp  system_status_pub.cpp  system_status_sub.cpp  topicPub.cpp  topicSub.cpp  turtle_circle.cpp  turtle_control.cpp
src/fishros_cpp/systemStatus/: systemStatus.cpp  systemStatus.h
src/helloworld_cpp/: CMakeLists.txt  package.xml
src/helloworld_cpp/src/: helloworld.cpp  person_node.cpp
src/pkg01_helloworld_cpp/: CMakeLists.txt  package.xml
src/pkg01_helloworld_cpp/src/: helloworld.cpp
src/robot_control_interfaces/: package.xml
src/system_status_interface/msg/: SystemStatus.msg
